[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatbot-server"
version = "0.1.0"
description = "WebSocket-based chatbot orchestration service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "deeep", email = "deep@singleespresso.com" }]
keywords = ["fastapi", "websocket", "chatbot", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=13.0",
  "pydantic>=2.9.0",
  "nest-asyncio>=1.6.0",
  "jellyfish>=1.1.0",
  "importlib-metadata>=8.5.0",
]

# Optional dependency groups
[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.0",
  "black>=24.10.0",
  "debugpy>=1.8.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/d-e-e-p/chatbot-server"
Documentation = "https://github.com/d-e-e-p/chatbot-server#readme"
Repository = "https://github.com/d-e-e-p/chatbot-server.git"
Issues = "https://github.com/d-e-e-p/chatbot-server/issues"
Changelog = "https://github.com/d-e-e-p/chatbot-server/blob/main/CHANGELOG.md"

# Entry points for CLI commands (optional)
[project.scripts]
chatbot-server = "src.app:main"

# Hatch build configuration
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/test",
  "/tests",
  "/.venv",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.mypy_cache",
  "/__pycache__",
]

# UV configuration
[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.0",
  "black>=24.10.0",
  "debugpy>=1.8.0",
  "ruff>=0.7.0",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["test", "tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "websocket: marks tests as websocket tests",
  "e2e: marks tests as end-to-end tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
  "*/tests/*",
  "*/test/*",
  "*/__pycache__/*",
  "*/venv/*",
  "*/.venv/*",
  "*/site-packages/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod",
  "class .*\\bProtocol\\):",
  "@overload",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# Black configuration
[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# Ruff - linter
[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "UP",    # pyupgrade
  "ARG",   # flake8-unused-arguments
  "SIM",   # flake8-simplify
  "TCH",   # flake8-type-checking
  "PTH",   # flake8-use-pathlib
  "ASYNC", # flake8-async
  "DTZ",   # flake8-datetimez
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
  "UP007", # Use X | Y for type annotations (not available in all versions)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]             # Unused imports
"test/**/*.py" = ["ARG", "S101", "PLR2004"]  # Unused arguments, assert usage
"tests/**/*.py" = ["ARG", "S101", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# MyPy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false    # Set to true for strict typing
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["jellyfish.*", "nest_asyncio.*"]
ignore_missing_imports = true
